# inviwo-module-vittf

./: .gitignore  README.md  compile_commands.json
neuraltf/: CMakeLists.txt  depends.cmake  readme.md
neuraltf/bindings/: CMakeLists.txt
neuraltf/bindings/src/: pyneuraltf.cpp
neuraltf/data/workspaces/: ntf.inv  ntfuni.inv  synth.inv
neuraltf/data/workspaces/figures/: bee_hbm1.inv  bls_artifacts.inv  bonsai3.inv  carp.inv  case1_t1_post.inv  case2_t1_pre.inv  case2_t1_pre2.inv  case2_t1_pre_cut.inv  compare_featres.inv  ctorg10.inv  ctorg10b_comparison.inv  ctorg10b_final.inv  ctorg10best.inv  ctorg10okayish.inv  ctorg10shadows.inv  ctorg_video.inv  jarv.inv  mri_heart.inv  mri_liver.inv  newgui.inv  penguin.inv  penguinh.inv  tooth.inv  tooth9.inv  walnut.inv
neuraltf/glsl/: annotation.frag  neuraltfraycaster.frag  neuraltfraycaster_old.frag  volumeslice.frag
neuraltf/include/inviwo/neuraltf/: neuraltfmodule.h  neuraltfmoduledefine.h
neuraltf/include/inviwo/neuraltf/bindings/: pyneuraltf.h
neuraltf/include/inviwo/neuraltf/processors/: brushvolumeslicegl.h  dinovolumerenderer.h
neuraltf/include/inviwo/neuraltf/properties/: ntfproperty.h
neuraltf/python/: DinoSimilarities.py  SegmentationVolumeSplitter.py  bilateral_solver3d.py
neuraltf/python/processors/: DinoSimilarities.py
neuraltf/src/: neuraltfmodule.cpp
neuraltf/src/bindings/: pyneuraltf.cpp
neuraltf/src/processors/: brushvolumeslicegl.cpp  dinovolumerenderer.cpp
neuraltf/src/properties/: ntfproperty.cpp
